tdf#101771 framework: avoid deadlock in AutoRecovery

AutoRecovery::implts_updateModifiedState() should call external
functions like isModified() before acquiring its own mutex.

(regression from 403eefe81b8a0afe888c60452c17d6b2c5d8343f)

Change-Id: Iae56eec2b6f392b7a7f65a5f54c73efa746263d0